examples/typechecking/multiple_matching_impls.an

type Thing = nothing: Unit

trait Foo a with
    foo: fn a -> Unit

trait Bar a with
    bar: fn a -> Unit

trait Baz a with
    baz: fn a -> Unit

main () =
    // The call from which the `Foo a` constraint arises
    foo (Thing ())

// Candidate 1
impl candidate1 {_: Bar a}: Foo a with
    foo a = bar a

impl bar {_: Baz a}: Bar a with
    bar a = baz a

impl baz: Baz Thing with
    baz _ = ()


// Does not match
impl does_not_match {_: Print a}: Foo a with
    foo _ = ()


// Candidate 2
impl candidate2: Foo Thing with
    foo _ = ()

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// type Thing =
//     nothing: Unit
// 
// type Foo a [env] =
//     foo: fn a [[env]] -> Unit
// 
// type Bar a [env] =
//     bar: fn a [[env]] -> Unit
// 
// type Baz a [env] =
//     baz: fn a [[env]] -> Unit
// 
// (main: fn Unit -> _ can _) () =
//     (foo: (error)) ((Thing: fn Unit -> Thing pure) ())
// 
// implicit (candidate1: fn {Bar a} -> Foo a pure) {(_: Bar a)} : Foo a (Bar a [env_0]) pure = Foo a (Bar a [env_0]) with
//     (foo: fn a [(Bar a)] -> Unit pure) = fn (a: a) -> (bar: fn {Baz _} -> Bar _ pure) (a: a)
// 
// implicit (bar: fn {Baz a} -> Bar a pure) {(_: Baz a)} : Bar a (Baz a [env_0]) pure = Bar a (Baz a [env_0]) with
//     (bar: fn a [(Baz a)] -> Unit pure) = fn (a: a) -> (baz: Baz Thing) (a: a)
// 
// implicit (baz: Baz Thing) = Baz Thing NoClosureEnv with
//     (baz: fn Thing -> Unit pure) = fn (_: Thing) -> ()
// 
// implicit (does_not_match: fn {Print a} -> Foo a pure) {(_: Print a)} : Foo a (Print a [env_0]) pure = Foo a (Print a [env_0]) with
//     (foo: fn a [(Print a)] -> Unit pure) = fn (_: a) -> ()
// 
// implicit (candidate2: Foo Thing) = Foo Thing NoClosureEnv with
//     (foo: fn Thing -> Unit pure) = fn (_: Thing) -> ()

// expected stderr:
// examples/typechecking/multiple_matching_impls.an:15:5
// 14 |     // The call from which the `Foo a` constraint arises
// 15 |     foo (Thing ())	// error: `foo` not found in scope
//    |     ^^^
// 
// examples/typechecking/multiple_matching_impls.an:19:5
// 18 | impl candidate1 {_: Bar a}: Foo a with
//    |     // error: Expected the closure environment (Bar a), but the actual environment was empty
// 19 |     foo a = bar a
//    |     ^^^
// 
// examples/typechecking/multiple_matching_impls.an:19:13
// 18 | impl candidate1 {_: Bar a}: Foo a with
//    |     // error: Expected fn _ [_] -> Unit can _ but found fn {Baz _} -> Bar _ pure
// 19 |     foo a = bar a
//    |             ^^^
// 
// examples/typechecking/multiple_matching_impls.an:22:5
// 21 | impl bar {_: Baz a}: Bar a with
//    |     // error: Expected the closure environment (Baz a), but the actual environment was empty
// 22 |     bar a = baz a
//    |     ^^^
// 
// examples/typechecking/multiple_matching_impls.an:22:13
// 21 | impl bar {_: Baz a}: Bar a with
// 22 |     bar a = baz a	// error: Expected fn _ [_] -> Unit can _ but found Baz Thing
//    |             ^^^
// 
// examples/typechecking/multiple_matching_impls.an:30:5
// 29 | impl does_not_match {_: Print a}: Foo a with
//    |     // error: Expected the closure environment (Print a), but the actual environment was empty
// 30 |     foo _ = ()
//    |     ^^^
// 
// Found 6 errors and 0 warnings

